# QT

Task-1/: main.cpp
Task-10/10_TCPclient/: mainwindow.cpp  tcpclient.cpp  tcpclient.h
Task-10/10_TCPserver/: main.cpp  tcpserver.cpp
Task-2/: CMakeLists.txt  main.cpp
Task-3/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nameinput.cpp  nameinput.h  nameinput.ui
Task-4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Task-5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Task-6/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Task-8/: CMakeLists.txt  datamodel.cpp  datamodel.h  dbdata.cpp  dbdata.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Task-9/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
